mod: update schema, specification & code
